[fix] Now, it overflows

--- a/static/style/finderNav.sass
+++ b/static/style/finderNav.sass
@@ -4,21 +4,24 @@
   max-width: 640px
   overflow-x: scroll
   white-space: nowrap
-  .columnnav-column
-    float: left
-    margin: none
-    height: 480px
-    max-height: 480px
-    width: 200px
-    overflow-y: auto
-    display: inline-block
-    ul
-      list-style: none
-      li
-        font-size: 125%
-        padding: 5px
-        border-top: 1px solid #333
-        &:first-child
-          border-top: none
-        &:hover
-          background-color: #eee
+  .columnnav-container
+    width: 10000px
+    &>li
+      display: inline
+    .columnnav-column
+      margin: none
+      height: 480px
+      max-height: 480px
+      width: 200px
+      overflow-y: auto
+      display: inline-block
+      ul
+        list-style: none
+        li
+          font-size: 125%
+          padding: 5px
+          border-top: 1px solid #333
+          &:first-child
+            border-top: none
+          &:hover
+            background-color: #eee
